; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_gwsocket.c_open_fifoin.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_gwsocket.c_open_fifoin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* }

@conf = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@WS_PIPEIN = common dso_local global i8* null, align 8
@O_WRONLY = common dso_local global i32 0, align 4
@O_NONBLOCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @open_fifoin() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 0), align 8
  %5 = icmp ne i8* %4, null
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 0), align 8
  br label %10

8:                                                ; preds = %0
  %9 = load i8*, i8** @WS_PIPEIN, align 8
  br label %10

10:                                               ; preds = %8, %6
  %11 = phi i8* [ %7, %6 ], [ %9, %8 ]
  store i8* %11, i8** %2, align 8
  %12 = load i8*, i8** %2, align 8
  %13 = load i32, i32* @O_WRONLY, align 4
  %14 = load i32, i32* @O_NONBLOCK, align 4
  %15 = or i32 %13, %14
  %16 = call i32 @open(i8* %12, i32 %15)
  store i32 %16, i32* %3, align 4
  %17 = icmp eq i32 %16, -1
  br i1 %17, label %18, label %19

18:                                               ; preds = %10
  store i32 -1, i32* %1, align 4
  br label %21

19:                                               ; preds = %10
  %20 = load i32, i32* %3, align 4
  store i32 %20, i32* %1, align 4
  br label %21

21:                                               ; preds = %19, %18
  %22 = load i32, i32* %1, align 4
  ret i32 %22
}

declare dso_local i32 @open(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
